# old_Project_ESI

./: .gitignore  readme.md
Tetris/: Readme.md
Tetris/Tetris/: .gitignore  CMakeLists.txt
Tetris/Tetris/TetrisGui/: CMakeLists.txt  main.cpp
Tetris/Tetris/TetrisGui/controller/: GameControllerGUI.cpp  GameControllerGUI.h
Tetris/Tetris/TetrisGui/model/: Bag.cpp  Bag.h  Board.cpp  Board.h  Brick.cpp  Brick.h  BrickPositions.cpp  BrickPositions.h  Enums.h  Game.cpp  Game.h  GameState.h  Player.cpp  Player.h  Position.cpp  Position.h  RelatedPositions.cpp  RelatedPositions.h  TetrisException.h
Tetris/Tetris/TetrisGui/util/: Observable.cpp  Observable.h  Observer.h
Tetris/Tetris/TetrisGui/view/: GameConfigForm.cpp  GameConfigForm.h  gameview.cpp  gameview.h
Tetris/Tetris/src/: CMakeLists.txt  main.cpp
Tetris/Tetris/src/controller/: GameController.cpp  GameController.h
Tetris/Tetris/src/model/: Bag.cpp  Bag.h  Board.cpp  Board.h  Brick.cpp  Brick.h  Enums.h  Game.cpp  Game.h  GameState.h  Player.cpp  Player.h  Position.cpp  RelatedPositions.cpp  TetrisException.h
Tetris/Tetris/src/util/: Observable.cpp  Observable.h  Observer.h
Tetris/Tetris/src/view/: ConsoleView.cpp  ConsoleView.h
Tetris/Tetris/test/: CMakeLists.txt  TestBoard.cpp  TestBrick.cpp  TestGame.cpp  TestPlayer.cpp
TuringGame/: readme.md
TuringGame/JavaDoc/: allclasses-index.html  allpackages-index.html  element-list  help-doc.html  index.html  member-search-index.js  module-search-index.js  overview-tree.html  package-search-index.js  search.html  serialized-form.html  type-search-index.js
TuringGame/JavaDoc/com.example.turinggame/: module-summary.html
TuringGame/JavaDoc/com.example.turinggame/Command/: ChooseValidatorCmd.html  Command.html  CommandManager.html  EnterCodeCmd.html  NextRoundCmd.html  package-summary.html  package-tree.html
TuringGame/JavaDoc/com.example.turinggame/ConsoleVersion/: App.html  package-summary.html  package-tree.html
TuringGame/JavaDoc/com.example.turinggame/ConsoleVersion/ConsoleView/: ConsoleView.html  package-summary.html  package-tree.html
TuringGame/JavaDoc/com.example.turinggame/ConsoleVersion/Controller/: Controller.html  package-summary.html  package-tree.html
TuringGame/JavaDoc/com.example.turinggame/JavaFxVersion/: MainApplication.html  package-summary.html  package-tree.html
TuringGame/JavaDoc/com.example.turinggame/JavaFxVersion/Controller/: CodeInputHandler.html  EventHandlerManager.html  GameController.html  ValidatorHandle.html  package-summary.html  package-tree.html
TuringGame/JavaDoc/com.example.turinggame/JavaFxVersion/View/: ActionButtonsView.html  CodeInputView.html  CustomAlert.html  EndView.html  GameView.html  MessageAreaView.html  ProblemChoiceView.html  ValidatorsView.html  package-summary.html  package-tree.html
TuringGame/JavaDoc/com.example.turinggame/Loader/: Loader.html  package-summary.html  package-tree.html
TuringGame/JavaDoc/com.example.turinggame/Model/: Code.html  Game.html  GameFacade.html  GameState.html  Problem.html  Round.html  TuringException.html  package-summary.html  package-tree.html
TuringGame/JavaDoc/com.example.turinggame/Model/Validator/: CompareOneDigit.html  CompareSum.html  CompareTwoDigits.html  CountDigit.html  CountEven.html  CountRepetitions.html  EvenSum.html  Extremum.html  MajorityEven.html  OrderOfDigits.html  ParityOfDigit.html  TwinDigits.html  Validator.html  (+3 more)
TuringGame/JavaDoc/com.example.turinggame/Util/: Observable.html  Observer.html  package-summary.html  package-tree.html
TuringGame/JavaDoc/index-files/: index-1.html  index-10.html  index-11.html  index-12.html  index-13.html  index-14.html  index-15.html  index-16.html  index-17.html  index-18.html  index-2.html  index-3.html  index-4.html  index-5.html  index-6.html  index-7.html  index-8.html  index-9.html
TuringGame/TuringGame/: pom.xml
(+67 files in other folders)
